# collaborative-editor

./: Makefile  dart.makefile  docker-compose.yaml  rust.makefile
client/: Cargo.toml  Dockerfile
client/src/: lib.rs  main.rs
client/tests/: integration_test.rs  unit_test.rs
server/: Cargo.toml  Dockerfile  README.md
server/src/: lib.rs  main.rs
server/tests/: unit_test.rs
web_client/: Dockerfile  pubspec.yaml
web_client/android/app/: build.gradle
web_client/lib/: main.dart
web_client/test/: widget_test.dart
web_client/web/: index.html
